[package]
name = "stubby"
description = "stubbing that doesn't hurt you or your IDE"
categories = ["development-tools::testing"]
keywords = ["mock", "stub", "mocking", "stubbing", "testing"]
version = "0.3.2"
edition = "2021"
rust-version = "1.58"
authors = ["alpha-tango-kilo <git@heyatk.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://codeberg.org/alpha-tango-kilo/stubby"
repository = "https://codeberg.org/alpha-tango-kilo/stubby"

[features]
type-safe = []

[dependencies]

[dev-dependencies]
tokio = { version = "1.29.0", features = ["rt", "macros"] }
